--- a/pousadaaqualtune.html
+++ b/pousadaaqualtune.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="pousadasabinaeaqua.css">
     <link rel="stylesheet" href="swiper-bundle.min.css">
-    <title>Pousada Sabina - Paloma Siqueira</title>
+    <title>Pousada Aqualtune - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
@@ -38,7 +38,7 @@
     </header>
     <main>
         <div class="sobre">
-            <div class="title"><p>POUSADA <br> SABINA</p></div>
+            <div class="title"><p>POUSADA <br> AQUALTUNE</p></div>
             <div class="about">
                 <h2>INTERIORES</h2>
                 <h3>FOTOS POR:</h3>
@@ -49,35 +49,21 @@
                 </p>
             </div>
         </div>
-        <div class="frame1">
-            <img src="./assets/pousadasabina/sabina1_1x.webp" alt="imagem capa Pousada Sabina">
-            <img src="./assets/pousadasabina/unsplash_enhzc6dei0y_1x.webp" alt="imagem Pousada Sabina">
-        </div>
-        <div class="frame4">
-            <img src="./assets/pousadasabina/sabina_1.webp" alt="imagem Pousada Sabina">
-        </div>
-        <div class="frame3">
-            <img src="./assets/pousadasabina/sabina_1_1x.webp" alt="imagem Pousada Sabina">
+        <div class="frame5">
+          <img src="./assets/pousadaaqualtune/unsplash_enhzc6dei0y_1x.webp" alt="imagem capa Pousada AQUALTUNE">
         </div>
         <div class="frame1">
-            <img src="./assets/pousadasabina/sabina_2_1x.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtune/frame1.webp" alt="imagem Pousada AQUALTUNE">
+            <img src="./assets/pousadaaqualtune/frame3333.webp" alt="imagem Pousada AQUALTUNE">
         </div>
-        <div class="container-slider">
-            <div class="slider-wrapper">
-                <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
-                <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4.webp" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_5.webp" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4_1x.webp" alt=""></div>
-                </div>
-                <div class="slider2-nav">
-                    <a class="dot2" onclick="currentSlide(1)" ></a>
-                    <a class="dot2" onclick="currentSlide(2)" ></a>
-                    <a class="dot2" onclick="currentSlide(3)" ></a>
-                </div>
-            <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
-            </div>
-
+        <div class="frame3" style="background-color: white;">
+            <img src="./assets/pousadaaqualtune/frame3.webp" alt="imagem Pousada AQUALTUNE">
+        </div>
+        <div class="frame1">
+            <img src="./assets/pousadaaqualtune/sabina_24_1x.webp" alt="imagem Pousada AQUALTUNE">
+        </div>
+        <div class="frame3" style="background-color: white;">
+            <img src="./assets/pousadaaqualtune//sabina_1_1x.webp" alt="imagem Pousada AQUALTUNE">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
