pousada aqualtune initial

--- a/pousadaaqualtune.html
+++ b/pousadaaqualtune.html
@@ -42,28 +42,32 @@
             <div class="about">
                 <h2>INTERIORES</h2>
                 <h3>FOTOS POR:</h3>
-                <h5>@minafotovideo <br>@camislemonde</h5>
+                <h5>@minafotovideo <br>@camislemonde <br>Mariana Sena</h5>
                 <p>Projeto: Paloma Siqueira
                 <br>Local: Maraú, Bahia, Brasil
-                <br>Conclusão da Obra: 2022
+                <br>Conclusão da Obra: 2021
                 </p>
             </div>
         </div>
         <div class="frame5">
-          <img src="./assets/pousadaaqualtune/unsplash_enhzc6dei0y_1x.webp" alt="imagem capa Pousada AQUALTUNE">
+          <img id="imgaqualtune" src="./assets/pousadaaqualtune/unsplash_enhzc6dei0y_1x.webp" alt="imagem capa Pousada AQUALTUNE">
+          <label for="imgaqualtune"><span style="font-weight: bold;">Foto por</span> Mariana Sena</label>
         </div>
         <div class="frame1">
             <img src="./assets/pousadaaqualtune/frame1.webp" alt="imagem Pousada AQUALTUNE">
             <img src="./assets/pousadaaqualtune/frame3333.webp" alt="imagem Pousada AQUALTUNE">
         </div>
-        <div class="frame3" style="background-color: white;">
+        <div class="frame3 frame3aqua" style="background-color: white;">
             <img src="./assets/pousadaaqualtune/frame3.webp" alt="imagem Pousada AQUALTUNE">
         </div>
         <div class="frame1">
             <img src="./assets/pousadaaqualtune/sabina_24_1x.webp" alt="imagem Pousada AQUALTUNE">
         </div>
-        <div class="frame3" style="background-color: white;">
-            <img src="./assets/pousadaaqualtune//sabina_1_1x.webp" alt="imagem Pousada AQUALTUNE">
+        <div class="frame3 frame3aqua" style="background-color: white;">
+            <img src="./assets/pousadaaqualtune/aqualtune_a_5_1x.webp" alt="imagem Pousada AQUALTUNE">
+        </div>
+        <div class="frame1">
+            <img src="./assets/pousadaaqualtune/sabina_2_1x.webp" alt="imagem Pousada AQUALTUNE">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
