--- a/pousadaaqualtuneampliacao.html
+++ b/pousadaaqualtuneampliacao.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="pousadasabinaeaqua.css">
     <link rel="stylesheet" href="swiper-bundle.min.css">
-    <title>Pousada Sabina - Paloma Siqueira</title>
+    <title>Pousada Aqualtune Ampliação - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
@@ -37,47 +37,58 @@
         </nav>
     </header>
     <main>
-        <div class="sobre">
-            <div class="title"><p>POUSADA <br> SABINA</p></div>
-            <div class="about">
-                <h2>INTERIORES</h2>
+        <div class="sobre sobreamplia">
+            <div class="title"><p>POUSADA <br> AQUALTUNE <br>AMPLIAÇÃO</p></div>
+            <div class="about aboutamplia">
+                <h2>ARQUITETURA + INTERIORES</h2>
                 <h3>FOTOS POR:</h3>
-                <h5>@minafotovideo <br>@camislemonde</h5>
+                <h5>Mariana Sena</h5>
                 <p>Projeto: Paloma Siqueira
                 <br>Local: Maraú, Bahia, Brasil
-                <br>Conclusão da Obra: 2022
+                <br>Conclusão da Obra: 2024
                 </p>
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/pousadasabina/sabina1_1x.webp" alt="imagem capa Pousada Sabina">
-            <img src="./assets/pousadasabina/unsplash_enhzc6dei0y_1x.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/1.webp" alt="imagem capa Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/2.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="frame4">
-            <img src="./assets/pousadasabina/sabina_1.webp" alt="imagem Pousada Sabina">
-        </div>
-        <div class="frame3">
-            <img src="./assets/pousadasabina/sabina_1_1x.webp" alt="imagem Pousada Sabina">
+        <div class="frame3 frame3ampli" style="background-color:white;">
+            <img src="./assets/pousadaaqualtuneampliacao/3.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/4.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame1">
-            <img src="./assets/pousadasabina/sabina_2_1x.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/5.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/6.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="container-slider">
+        <div class="container-slider sliderampli">
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4.webp" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_5.webp" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadasabina/sabina_4_1x.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadaaqualtuneampliacao/7.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadaaqualtuneampliacao/8.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadaaqualtuneampliacao/9.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/pousadaaqualtuneampliacao/slide4.webp" alt=""></div>
                 </div>
                 <div class="slider2-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
                     <a class="dot2" onclick="currentSlide(2)" ></a>
                     <a class="dot2" onclick="currentSlide(3)" ></a>
+                    <a class="dot2" onclick="currentSlide(4)" ></a>
                 </div>
             <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
             </div>
-
+        </div>
+        <div class="frame1">
+            <img src="./assets/pousadaaqualtuneampliacao/10.webp" alt="imagem Pousada Sabina">
+        </div>
+        <div class="frame3 frame3ampli" style="background-color:white;">
+            <img src="./assets/pousadaaqualtuneampliacao/11.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/12.webp" alt="imagem Pousada Sabina">
+        </div>
+        <div class="frame1">
+            <img src="./assets/pousadaaqualtuneampliacao/13.webp" alt="imagem Pousada Sabina">
+            <img src="./assets/pousadaaqualtuneampliacao/14.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
