--- a/projetos.html
+++ b/projetos.html
@@ -44,6 +44,31 @@
         <div class="container">
             <div class="container1">
                 <div class="card1">
+                    <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
+                    <h2>2024</h2>
+                    <a target="_blank" href="pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
+                    <h3>FOTOS: MARIANA SENA</h3>
+                    <h4 style="width: 190px;">ARQUITETURA + INTERIORES </h4>
+                </div>
+                <div class="card2">
+                    <h1>POUSADA SABINA</h1>
+                    <h2>2022</h2>
+                    <a target="_blank" href="pousadasabina.html"><img src="assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
+                    <h3>FOTOS:  @minafotovideo @camislemonde</h3>
+                    <h4 style="width: 90px;">INTERIORES</h4>
+                </div>
+            </div>
+            <div class="container2">
+                <div class="card3">
+                    <h1>POUSADA AQUALTUNE</h1>
+                    <h2>2021</h2>
+                    <a target="_blank" href="pousadaaqualtune.html"><img src="assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
+                    <h3>FOTOS POR: @minafotovideo / @camislemonde / Mariana Sena</h3>
+                    <h4 style="width: 90px;">INTERIORES</h4>
+                </div>
+            </div>
+            <div class="container1">
+                <div class="card1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
                     <a target="_blank" href="casajc66.html"><img src="assets/projeto-11.webp" alt="link projeto casa JC66"></a>
