--- a/pousadaaqualtune.html
+++ b/pousadaaqualtune.html
@@ -39,7 +39,7 @@
     </header>
     <main>
         <div class="sobre">
-            <div class="title"><p>POUSADA <br> AQUALTUNE</p></div>
+            <div class="title titleaqua"><p>POUSADA <br> AQUALTUNE</p></div>
             <div class="about">
                 <h2>INTERIORES</h2>
                 <h3>FOTOS POR:</h3>
