--- a/pousadaaqualtuneampliacao.html
+++ b/pousadaaqualtuneampliacao.html
@@ -80,7 +80,7 @@
             <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
             </div>
         </div>
-        <div class="frame1">
+        <div class="frame3 frame3ampli-2" style="background-color:white;">
             <img src="./assets/pousadaaqualtuneampliacao/10.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame3 frame3ampli" style="background-color:white;">
