--- a/pousadasabina.html
+++ b/pousadasabina.html
@@ -54,10 +54,10 @@
             <img src="./assets/pousadasabina/sabina1_1x.webp" alt="imagem capa Pousada Sabina">
             <img src="./assets/pousadasabina/unsplash_enhzc6dei0y_1x.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="frame4">
+        <div class="frame3" style="margin-top: 56px; margin-bottom: 56px">
             <img src="./assets/pousadasabina/sabina_1.webp" alt="imagem Pousada Sabina">
         </div>
-        <div class="frame3">
+        <div class="frame4" style="margin-bottom: 56px">
             <img src="./assets/pousadasabina/sabina_1_1x.webp" alt="imagem Pousada Sabina">
         </div>
         <div class="frame1">
