--- a/pilatesbrazil.html
+++ b/pilatesbrazil.html
@@ -1,8 +1,10 @@
+<!doctype html>
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
+    <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
@@ -119,7 +121,7 @@
             <div class="swipercontent textslide" id="textslide5">
                 <h1>ODOYÁ LOUNGE</h1>
                 <h2>2017</h2>
-                <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                <a target="_blank" href="odoyalounge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                 <h3>FOTOS: OKA FOTOGRAFIA</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -148,7 +150,7 @@
                 <h2>2006</h2>
                 <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
-                <h4>EDIFICAÇÃO NOVA</h4>
+                <h4>INTERIORES</h4>
             </div>
           </swiper-slide>
           <swiper-slide>
