--- a/odoyalounge.html
+++ b/odoyalounge.html
@@ -129,7 +129,7 @@
             <div class="swipercontent textslide" id="textslide5">
                 <h1>ODOYÁ LOUNGE</h1>
                 <h2>2017</h2>
-                <a target="_blank" href="odoyalouge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                <a target="_blank" href="odoyalounge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                 <h3>FOTOS: OKA FOTOGRAFIA</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -158,7 +158,7 @@
                 <h2>2006</h2>
                 <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
-                <h4>EDIFICAÇÃO NOVA</h4>
+                <h4>INTERIORES</h4>
             </div>
           </swiper-slide>
           <swiper-slide>
