--- a/projetos.html
+++ b/projetos.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="pt-br">
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <meta charset="UTF-8">
+    <meta charset="UFT-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
@@ -103,7 +103,7 @@
                 <div class="card5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="odoyalouge.html"><img src="assets/projeto-55.webp" alt="link projeto odoya lounge"></a>
+                    <a target="_blank" href="odoyalounge.html"><img src="assets/projeto-55.webp" alt="link projeto odoya lounge"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
