ajuste (AtelieLV de edificacao nova => interiores)

--- a/projetos.html
+++ b/projetos.html
@@ -130,7 +130,7 @@
                     <h2>2006</h2>
                     <a target="_blank" href="atelielv.html"><img src="assets/projeto-88.webp" alt="link projeto casa lv"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
-                    <h4>EDIFICAÇÃO NOVA</h4>
+                    <h4>INTERIORES</h4>
                 </div>
             </div>
             <div class="container6">
