correçao dos slides dos projetos

--- a/casabp.html
+++ b/casabp.html
@@ -94,7 +94,7 @@
         <div class="container3-slider">
             <div class="slider3-wrapper">
                 <a class="prev3" id="arrowSlider3" onclick="prev(this)">&#10094;</a>
-                <div class="slider3">
+                <div class="slider3 slider">
                     <div class="item" id="imgslide1"><img src="./assets/casabp/img-slide2-1.jpg" alt=""></div>
                     <div class="item" id="imgslide1"><img src="./assets/casabp/img-slide2-2.jpg" alt=""></div>
                     <div class="item" id="imgslide1"><img src="./assets/casabp/img-slide2-3.jpg" alt=""></div>
