--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     </a>
                 </div>
                 <div class="slider-nav">
-                    <a class="dot" href="#slide1" onclick="currentSlide(1)"></a>
-                    <a class="dot" href="#slide2" onclick="currentSlide(2)"></a>
-                    <a class="dot" href="#slide3" onclick="currentSlide(3)"></a>
-                    <a class="dot" href="#slide4" onclick="currentSlide(4)"></a>
-                    <a class="dot" href="#slide5" onclick="currentSlide(5)"></a>
+                    <a class="dot" onclick="currentSlide(1)"></a>
+                    <a class="dot" onclick="currentSlide(2)"></a>
+                    <a class="dot" onclick="currentSlide(3)"></a>
+                    <a class="dot" onclick="currentSlide(4)"></a>
+                    <a class="dot" onclick="currentSlide(5)"></a>
                 </div>
                 <i id="right" class="fa-solid fa-angle-right" onclick="plusSlides(1)">&#10095;</i> 
             </div>
