upload imgs Slopes Ski & Snow Board Club

--- a/projetos.html
+++ b/projetos.html
@@ -44,6 +44,22 @@
         <div class="container">
             <div class="container1">
                 <div class="card1">
+                    <h1>CASA DS</h1>
+                    <h2>2024</h2>
+                    <a target="_blank" href="casads.html"><img src="assets/projeto-ds.png" alt="link projeto CASA DS"></a>
+                    <h3>FOTOS: PIPO GIALLUISI</h3>
+                    <h4 style="width: 187px;">INTERIORES + CONSULTORIA </h4>
+                </div>
+                <div class="card2">
+                    <h1></h1>
+                    <h2>2025</h2>
+                    <a target="_blank" href="slopeskisnowboardclub.html"><img src="assets/projeto-sssbc.webp" alt="link projeto Slopes Ski & Snow Board Club"></a>
+                    <h3>FOTOS: PIPO GIALLUISI</h3>
+                    <h4 style="width: 160px;">REFORMA + INTERIORES</h4>
+                </div>
+            </div>
+            <div class="container1">
+                <div class="card1">
                     <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
                     <h2>2024</h2>
                     <a target="_blank" href="pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
