--- a/slopeskisnowboardclub.html
+++ b/slopeskisnowboardclub.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
     <link rel="stylesheet" href="pousadasabinaeaqua.css">
-    <link rel="stylesheet" href="casads.css">
+    <link rel="stylesheet" href="slopeskisnowboardclub.css">
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="css/slider.css">
-    <title>Casa DS - Paloma Siqueira</title>
+    <title>Slopes Ski & Snow Board Club - Paloma Siqueira</title>
     <link rel="shortcut icon" href="./assets/ICONPALOMA.png" type="image/x-icon">
     <meta name="author" content="Flavia Sigoli"/>
     <meta http-equiv="content-language" content="pt-br, en-US" />
@@ -41,36 +41,31 @@
         </nav>
     </header>
     <main>
-        <div class="sobre sobreds">
-            <div class="title"><p>CASA <br>DS</p></div>
-            <div class="about aboutds">
-                <h2>INTERIORES + CONSULTORIA</h2>
+        <div class="sobre sobresssbc">
+            <div class="title"><h1>Slopes Ski &<br>Snow Board <br>Club</h1></div>
+            <div class="about aboutsssbc">
+                <h2>REFORMA + INTERIORES</h2>
                 <h3>FOTOS POR:</h3>
                 <h5>Pipo Gialluisi</h5>
                 <p>Projeto: Paloma Siqueira
                 <br>Local: São Paulo, SP, Brasil
-                <br>Ambientes: Estar, TV, Jantar, Lavabo, Escritório, Gourmet
-                <br>Área de intervenção: 165m2
-                <br>Conclusão da Obra: 2024
+                <br>Área: 200m2
+                <br>Execução: José Macário e equipe
+                <br>Conclusão da Obra: 2025
                 <br>Marcenaria: Marino Móveis
                 <br>Arte: Clau Slavec, Studio Lopomo
                 </p>
             </div>
         </div>
         <div class="frame1">
-            <img src="./assets/casads/250904A-015.webp" alt="imagem capa Casa DS">
-            <img src="./assets/casads/250904A-007.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-006.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-001.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-005.webp" alt="imagem Casa DS">
-        </div>
-        <div class="frame3 frame3ampli" style="background-color:white;">
-            <img src="./assets/casads/250904A-021.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-010.webp" alt="imagem Casa DS">
-        </div>
-        <div class="frame1">
-            <img src="./assets/casads/250904A-022.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-025.webp" alt="imagem Casa DS">
+            <img src="./assets/slopesski/250827A-001B.webp" alt="imagem capa Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-002B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-004B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-005B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-006B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-007B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-008B.webp" alt="imagem Slopes Ski & Snow Board Club">
+            <img src="./assets/slopesski/250827A-009B.webp" alt="imagem Slopes Ski & Snow Board Club">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
