projetos slide add

--- a/casajc66.html
+++ b/casajc66.html
@@ -112,6 +112,24 @@
         autoplay="true"
         pagination-dynamic-bullets="true">
           <swiper-slide>
+            <div class="swipercontent textslide" id="textslide10">
+                <h1 style="font-size: 22px;padding-bottom: 14px;">Slopes Ski & Snow<Br> Board Club</h1>
+                <h2>2024</h2>
+                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa JC66" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4 id="sssbch4">INTERIORES + CONSULTORIA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide20">
+                <h1>CASA CS</h1>
+                <h2>2024</h2>
+                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa JC66" draggable="false"></a>
+                <h3>FOTOS: PIPO GIALLUISI</h3>
+                <h4>INTERIORES + CONSULTORIA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
             <div class="swipercontent textslide" id="textslide1">
                 <h1>CASA JC66</h1>
                 <h2>2012</h2>
