a tag link project correção

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header id="navbar"> 
         <div id="home">
             <div class="menu-logo">
-                    <a href="index.html"><img src="./assets/Frame48.jpg" alt=""></a>
+                    <a href=""><img src="./assets/Frame48.jpg" alt=""></a>
             </div>
             <nav class="navbar">
                 <a href="#" class="btn-toggle">
@@ -31,9 +31,9 @@
                     <span class="bar"></span>
                 </a>
                 <div class="menu-links">
-                    <a href="index.html"> Início </a>
-                    <a href="./projetos.html"> Projetos </a>
-                    <a href="index.html#sobre"> Sobre </a>
+                    <a href=""> Início </a>
+                    <a href="https://palomasiqueiraarquiteta.com/projetos"> Projetos </a>
+                    <a href="#sobre"> Sobre </a>
                     </div>
             </nav>
         </div>
