--- a/annexe.html
+++ b/annexe.html
@@ -35,7 +35,7 @@
             </a>
             <div class="menu-links">
                 <a href="index.html"> Início </a>
-                <a href="./projetos.html"> Projetos </a>
+                <a href="https://palomasiqueiraarquiteta.com/projetos"> Projetos </a>
                 <a href="index.html#sobre"> Sobre </a>
                 </div>
         </nav>
