--- a/pousadasabina.html
+++ b/pousadasabina.html
@@ -34,7 +34,7 @@
             </a>
             <div class="menu-links">
                 <a href="palomasiqueiraarquiteta.com/"> Início </a>
-                <a href="./projetos.html"> Projetos </a>
+                <a href="https://palomasiqueiraarquiteta.com/projetos"> Projetos </a>
                 <a href="palomasiqueiraarquiteta.com/#sobre"> Sobre </a>
                 </div>
         </nav>
