slider sssbc errata

--- a/ministeriopp.html
+++ b/ministeriopp.html
@@ -109,7 +109,7 @@
                 <h2>2024</h2>
                 <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa JC66" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
-                <h4 id="sssbch4">INTERIORES + CONSULTORIA</h4>
+                <h4 id="sssbch4">REFORMA + INTERIORES</h4>
             </div>
           </swiper-slide>
           <swiper-slide>
