--- a/slopeskisnowboardclub.html
+++ b/slopeskisnowboardclub.html
@@ -45,8 +45,6 @@
             <div class="title"><h1>Slopes Ski &<br>Snow Board <br>Club</h1></div>
             <div class="about aboutsssbc">
                 <h2>REFORMA + INTERIORES</h2>
-                <h3>FOTOS POR:</h3>
-                <h5>Pipo Gialluisi</h5>
                 <p>Projeto: Paloma Siqueira
                 <br>Local: São Paulo, SP, Brasil
                 <br>Área: 200m2
@@ -55,6 +53,8 @@
                 <br>Marcenaria: Marino Móveis
                 <br>Arte: Clau Slavec, Studio Lopomo
                 </p>
+                <h3>FOTOS POR:</h3>
+                <h5>Pipo Gialluisi</h5>
             </div>
         </div>
         <div class="frame1">
@@ -76,17 +76,17 @@
           <swiper-slide>
             <div class="swipercontent textslide" id="textslide10">
                 <h1 style="font-size: 22px;padding-bottom: 14px;">Slopes Ski & Snow<Br> Board Club</h1>
-                <h2>2024</h2>
-                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa JC66" draggable="false"></a>
+                <h2>2025</h2>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/slopeskisnowboardclub"><img draggable="false" src="./assets/projeto-sssbc.png" alt="link projeto casa JC66" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4 id="sssbch4">REFORMA + INTERIORES</h4>
             </div>
           </swiper-slide>
           <swiper-slide>
             <div class="swipercontent textslide" id="textslide20">
-                <h1>CASA CS</h1>
+                <h1>CASA DS</h1>
                 <h2>2024</h2>
-                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa JC66" draggable="false"></a>
+                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa DS" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>INTERIORES + CONSULTORIA</h4>
             </div>
